Change yahoo-finance2 dependency to only use 2.13.x. v2.14.x does not work.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "url": "https://github.com/thess/MMM-MktIndex/issues"
   },
   "dependencies": {
-    "yahoo-finance2": "^2.13.2"
+    "yahoo-finance2": "~2.13.2"
   },
   "devDependencies": {}
 }
